@@ -1,3 +1,12 @@
+Mon, 14 Apr 2008 13:40:32 +0200 <thp@perli.net>
+Merge patch from Jerome Chabod to fix Remove podcasts for MP3 players
+
+	* src/gpodder/gui.py: Add warning message when we can't find a needed
+	attribute; add "Philippe Gouaillier" to list of contributors (bug
+	reporter for this bug)
+	* src/gpodder/sync.py: Add playcount attribute to MP3 player sync code
+	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=96)
+
 Mon, 14 Apr 2008 13:37:03 +0200 <thp@perli.net>
 Updated Russian translation by Leonid Ponomarev
 
